--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ body {
 /* NAVBAR FIX */
 header {
     width: 100%;
-    position: sticky;
+    position: fixed;
     top: 0;
     left: 0;
     padding: 15px 50px;
