--- a/aboutus.css
+++ b/aboutus.css
@@ -12,7 +12,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    
+    background-attachment: fixed;
     color: white;
     min-height: 100vh;
     overflow-x: hidden;
