--- a/ticket/register.css
+++ b/ticket/register.css
@@ -7,7 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f5f5f5;
+/*     background-color: #f5f5f5; */
     margin: 0;
     padding: 0;
 }
