--- a/ticket/register.css
+++ b/ticket/register.css
@@ -1,10 +1,11 @@
 body {
-    background: url('/images/home_1.png') no-repeat center center;
-    background-size: cover; /* Ensures the image covers the full screen */
-    background-attachment: fixed; /* Keeps background stable while scrolling */
+    background: url('/images/Group\ 174.svg') no-repeat center center;
+    background-size: auto; /* Ensures the image covers the full screen */
+    background-attachment: scroll; /* Keeps background stable while scrolling */
     font-family: 'Roboto', sans-serif;
     display: flex;
     justify-content: center;
+    background-color: #121212;
     align-items: center;
     height: 100vh;
 /*     background-color: #f5f5f5; */
@@ -38,7 +39,7 @@ body {
     margin-top: 25px;
     max-width: 350px;
     box-sizing: border-box;
-    margin-top: 220px; /* Added top margin for spacing */
+   
 }
 
 /* Adjust margin for mobile screens */
