--- a/ticket/register.css
+++ b/ticket/register.css
@@ -1,5 +1,5 @@
 body {
-    background: url('/images/Group 174.svg') no-repeat center center;
+    background: url('/images/Group.svg') no-repeat center center;
     background-size: auto; /* Ensures the image covers the full screen */
     background-attachment: scroll; /* Keeps background stable while scrolling */
     font-family: 'Roboto', sans-serif;
